# vzconfig

./: AUTHORS  Makefile.am  Makefile.in  README  configure  configure.ac  pathsubst.am
debian/: changelog  control  copyright  rules
etc/: Makefile.am  Makefile.in  vzconfig.conf  vzconfig.conf.in  vzhelp
etc/bash_completion.d/: Makefile.am  Makefile.in  vzconfig.sh
man/: Makefile.am  Makefile.in  vzconfig.8.pod.in
scripts/: Makefile.am  Makefile.in  vzconfig.in
